@@ -354,7 +354,7 @@ a -> compound/x :: X -> b;
 .Re
 For this purpose, anonymous compound elements are given constructed names
 like
-.RI `@Anon number '.
+.RI `@X number '.
 Nothing prevents a user from declaring an element named like a compound
 element component. We suggest that users generally avoid using the `/'
 character in their element names.
