@@ -14,9 +14,11 @@ class DiscardNoFree : public Element {
   DiscardNoFree();
   
   const char *class_name() const		{ return "DiscardNoFree"; }
-  Processing default_processing() const	{ return AGNOSTIC; }
+  Processing default_processing() const		{ return AGNOSTIC; }
   
   DiscardNoFree *clone() const			{ return new DiscardNoFree; }
+  int initialize(ErrorHandler *);
+  void uninitialize();
   
   void push(int, Packet *);
   
