@@ -31,8 +31,7 @@ Print::Print(const String &label)
 
 Print::~Print()
 {
-  if(_buf)
-    delete [] _buf;
+  if (_buf) delete[] _buf;
 }
 
 Print *
@@ -46,9 +45,9 @@ Print::configure(const String &conf, ErrorHandler* errh)
 {
   _bytes = 24;
   if (cp_va_parse(conf, this, errh,
-		  cpString, "Print Label", &_label,
+		  cpString, "label", &_label,
 		  cpOptional,
-		  cpInteger, "Bytes to print", &_bytes,
+		  cpInteger, "max bytes to print", &_bytes,
 		  cpEnd) < 0)
     return -1;
   _buf = new char[3*_bytes+1];
@@ -58,11 +57,10 @@ Print::configure(const String &conf, ErrorHandler* errh)
 Packet *
 Print::simple_action(Packet *p)
 {
-  int pos = 0;
-  
   if (!_buf)
     _buf = new char[3*_bytes+1];
   
+  int pos = 0;  
   for (unsigned i = 0; i < _bytes && i < p->length(); i++) {
     sprintf(_buf + pos, "%02x", p->data()[i] & 0xff);
     pos += 2;
